--- a/ui/admin/src/assets/i18n/en.json
+++ b/ui/admin/src/assets/i18n/en.json
@@ -16,6 +16,8 @@
     "phone": "Phone",
     "joinedAt": "Joined At",
     "create": "Create",
+    "edit": "Edit",
+    "delete": "Delete",
     "days": "days",
     "validation": {
       "required": "This field is required",
@@ -79,7 +81,35 @@
     "workouts": {
       "title": "Available Workouts",
       "add": "Add Workout",
-      "empty": "No workouts available yet. Add your first workout type to get started."
+      "edit": "Edit Workout",
+      "empty": "No workouts available yet. Add your first workout type to get started.",
+      "name": "Name",
+      "description": "Description",
+      "duration": "Duration",
+      "capacity": "Capacity",
+      "minutes": "minutes",
+      "clients": "clients",
+      "create": {
+        "success": "Workout created successfully",
+        "error": "Failed to create workout"
+      },
+      "update": {
+        "success": "Workout updated successfully",
+        "error": "Failed to update workout"
+      },
+      "delete": {
+        "title": "Delete Workout",
+        "message": "Are you sure you want to delete this workout? This action cannot be undone.",
+        "confirm": "Delete",
+        "success": "Workout deleted successfully",
+        "error": "Failed to delete workout"
+      },
+      "tariffs": {
+        "success": "Tariffs updated successfully",
+        "assign": "Assign Tariffs",
+        "title": "Manage Tariffs for {{name}}",
+        "empty": "No tariffs available. Please add tariffs first."
+      }
     },
     "trainers": {
       "title": "Club Trainers",
@@ -229,9 +259,9 @@
     "capacity": "participants",
     "tariffs": {
       "dialog": {
-        "title": "Manage Training Prices for {{name}}",
-        "empty": "No tariffs available for this workout",
-        "select": "Select tariff {{name}} for this workout"
+        "title": "Manage Tariffs for {{name}}",
+        "empty": "No tariffs available. Please add tariffs first.",
+        "select": "{{name}}"
       }
     },
     "workout": {
