--- a/ui/admin/src/assets/i18n/en.json
+++ b/ui/admin/src/assets/i18n/en.json
@@ -120,13 +120,15 @@
       "title": "Club Members",
       "empty": "No members yet. Invite your first member to get started.",
       "invite": {
-        "button":{
+        "button": {
           "text": "Invite Member"
         },
         "title": "Invite New Member",
         "email": "Email Address",
         "emailPlaceholder": "Enter member's email address",
-        "send": "Send Invite"
+        "send": "Send Invite",
+        "success": "Invitation sent successfully to {{email}}",
+        "error": "Failed to send invitation. Please try again."
       }
     },
     "tariffs": {
