Move client capacity from training to schedule on UI. Fix redirect issue after add/edit schedule

--- a/ui/admin/src/assets/i18n/en.json
+++ b/ui/admin/src/assets/i18n/en.json
@@ -451,12 +451,15 @@
       "trainer": "Trainer",
       "selectTrainer": "Select a trainer",
       "trainerRequired": "Please select a trainer",
-      "daysOfWeek": "Days of Week",
+      "daysOfWeek": "Days of the Week",
       "daysRequired": "Please select at least one day",
       "startTime": "Start Time",
-      "startTimeRequired": "Please enter a start time",
+      "startTimeRequired": "Start time is required",
       "endTime": "End Time",
-      "endTimeRequired": "Please enter an end time",
+      "endTimeRequired": "End time is required",
+      "capacity": "Maximum Capacity",
+      "capacityRequired": "Maximum capacity is required",
+      "capacityMin": "Capacity must be at least 1",
       "days": {
         "monday": "Monday",
         "tuesday": "Tuesday",
