Add remaining trainings amount and subscription expiration date on a client details page in Admin application

--- a/ui/admin/src/assets/i18n/en.json
+++ b/ui/admin/src/assets/i18n/en.json
@@ -29,7 +29,9 @@
     "validDays": "Valid Days",
     "price": "Price",
     "createdAt": "Created At",
-    "actions": "Actions"
+    "actions": "Actions",
+    "remainingTrainings": "Remaining Trainings",
+    "subscriptionExpiration": "Subscription Expires On"
   },
   "login": {
     "pageTitle": "Login",
