Add return button  to Client Details page. Update return button on Location Details page

--- a/ui/admin/src/assets/i18n/en.json
+++ b/ui/admin/src/assets/i18n/en.json
@@ -31,7 +31,8 @@
     "createdAt": "Created At",
     "actions": "Actions",
     "remainingTrainings": "Remaining Trainings",
-    "subscriptionExpiration": "Subscription Expires On"
+    "subscriptionExpiration": "Subscription Expires On",
+    "return": "Return"
   },
   "login": {
     "pageTitle": "Login",
