--- a/ui/admin/src/assets/i18n/en.json
+++ b/ui/admin/src/assets/i18n/en.json
@@ -482,6 +482,10 @@
     "load": {
       "error": "Failed to load schedule details"
     },
+    "capacity": "Capacity",
+    "no_schedules": "No schedules for this day",
+    "weekly_view": "Weekly View",
+    "daily_view": "Daily View",
     "form": {
       "workout": "Workout",
       "selectWorkout": "Select a workout",
