Add tenant location page to client application

--- a/ui/client/src/assets/i18n/en.json
+++ b/ui/client/src/assets/i18n/en.json
@@ -82,5 +82,16 @@
     "actions": {
       "logout": "Logout"
     }
+  },
+  "common": {
+    "page": "Page",
+    "of": "of",
+    "previous": "Previous",
+    "next": "Next"
+  },
+  "locations": {
+    "title": "Locations",
+    "noLocations": "No locations available",
+    "loading": "Loading locations..."
   }
 }
