--- a/ui/admin/src/assets/i18n/en.json
+++ b/ui/admin/src/assets/i18n/en.json
@@ -493,6 +493,7 @@
     "no_schedules": "No schedules for this day",
     "weekly_view": "Weekly View",
     "daily_view": "Daily View",
+    "classes": "classes",
     "form": {
       "workout": "Workout",
       "selectWorkout": "Select a workout",
