--- a/ui/admin/src/assets/i18n/en.json
+++ b/ui/admin/src/assets/i18n/en.json
@@ -136,6 +136,7 @@
         "email": "Email",
         "emailPlaceholder": "Please enter a client email",
         "send": "Invite",
+        "sending": "Sending...",
         "success": "Successfully invited {{email}}",
         "error": "Failed to invite client"
       },
