Change client application behaviour during join by invitation link: show sign up screen instead of log in

--- a/ui/client/src/assets/i18n/en.json
+++ b/ui/client/src/assets/i18n/en.json
@@ -30,6 +30,7 @@
   "signup": {
     "title": "Create Your Account",
     "subtitle": "Complete your registration to get started",
+    "invitationMessage": "You've been invited to join a sport club. Please complete your registration below.",
     "success": {
       "title": "Registration Successful!",
       "message": "Your account has been created and you've been added to the sport club. Redirecting to login page..."
