--- a/ui/admin/src/assets/i18n/en.json
+++ b/ui/admin/src/assets/i18n/en.json
@@ -381,6 +381,10 @@
         "required": "Please confirm your password",
         "mismatch": "Passwords do not match"
       },
+      "locale": {
+        "label": "Language",
+        "required": "Please select your preferred language"
+      },
       "button": {
         "register": "Sign Up",
         "loading": "Signing up..."
@@ -469,6 +473,10 @@
       "description": {
         "label": "Description",
         "placeholder": "Enter club description (optional)"
+      },
+      "locale": {
+        "label": "Default Language",
+        "required": "Please select the default language for your club"
       },
       "button": {
         "create": "Create Club",
