Admin application: add missed translations

--- a/ui/admin/src/assets/i18n/uk.json
+++ b/ui/admin/src/assets/i18n/uk.json
@@ -98,7 +98,20 @@
       "duration": "Тривалість",
       "capacity": "Місткість",
       "minutes": "хвилин",
-      "clients": "клієнтів"
+      "clients": "клієнтів",
+      "tariffs": {
+        "success": "Тарифи успішно оновлено",
+        "assign": "Призначити тарифи",
+        "title": "Керування тарифами для {{name}}",
+        "empty": "Немає доступних тарифів. Будь ласка, спочатку додайте тарифи."
+      },
+      "delete": {
+        "title": "Видалити тренування",
+        "message": "Ви впевнені, що хочете видалити це тренування? Цю дію неможливо скасувати.",
+        "confirm": "Видалити",
+        "success": "Тренування успішно видалено",
+        "error": "Помилка при видаленні тренування"
+      }
     },
     "trainers": {
       "title": "Тренери клубу",
@@ -107,7 +120,42 @@
     },
     "clients": {
       "title": "Клієнти",
-      "empty": "Клієнтів не знайдено"
+      "empty": "Клієнтів не знайдено",
+      "invite": {
+        "button": {
+          "text": "Запросити клієнта"
+        },
+        "title": "Запросити клієнта",
+        "email": "Електронна пошта",
+        "emailPlaceholder": "Будь ласка, введіть електронну пошту клієнта",
+        "send": "Запросити",
+        "sending": "Надсилання...",
+        "success": "Успішно запрошено {{email}}",
+        "error": "Не вдалося запросити клієнта"
+      },
+      "details": {
+        "title": "Деталі клієнта: {{name}}",
+        "payments": {
+          "title": "Історія платежів",
+          "empty": "Платежів не знайдено",
+          "cancel": {
+            "success": "Платіж успішно скасовано",
+            "error": "Не вдалося скасувати платіж"
+          },
+          "add": {
+            "button": "Додати платіж",
+            "title": "Додати новий платіж",
+            "training": "Тренування",
+            "tariff": "Тариф",
+            "trainingsCount": "Кількість тренувань",
+            "validDays": "Дійсно днів",
+            "price": "Ціна",
+            "currency": "Валюта",
+            "success": "Платіж успішно додано",
+            "error": "Не вдалося додати платіж"
+          }
+        }
+      }
     },
     "tariffs": {
       "title": "Тарифи",
@@ -204,5 +252,161 @@
       "register": "Зареєструватися знову"
     },
     "loading": "Підтвердження вашої електронної пошти..."
+  },
+  "location": {
+    "create": {
+      "pageTitle": "Додати локацію",
+      "title": "Додати нову локацію",
+      "error": "Помилка при створенні локації",
+      "success": "Локацію успішно створено"
+    },
+    "edit": {
+      "pageTitle": "Редагувати локацію",
+      "title": "Редагувати локацію"
+    },
+    "update": {
+      "success": "Локацію успішно оновлено",
+      "error": "Помилка при оновленні локації"
+    },
+    "delete": {
+      "success": "Локацію успішно видалено",
+      "error": "Помилка при видаленні локації"
+    },
+    "form": {
+      "address": "Адреса",
+      "addressRequired": "Адреса обов'язкова",
+      "city": "Місто",
+      "cityRequired": "Місто обов'язкове",
+      "state": "Область",
+      "stateRequired": "Область обов'язкова",
+      "postalCode": "Поштовий індекс",
+      "postalCodeRequired": "Поштовий індекс обов'язковий",
+      "postalCodeInvalid": "Невірний формат поштового індексу",
+      "country": "Країна",
+      "countryRequired": "Країна обов'язкова",
+      "timezone": "Часовий пояс",
+      "timezoneRequired": "Часовий пояс обов'язковий"
+    },
+    "details": {
+      "pageTitle": "Деталі локації клубу",
+      "title": "Деталі клубу",
+      "club_location_title": "Деталі локації клубу",
+      "tabs": {
+        "workouts": "Тренування",
+        "trainers": "Тренери",
+        "schedule": "Розклад"
+      },
+      "workouts": {
+        "title": "Доступні тренування",
+        "add": "Додати тренування",
+        "empty": "Поки що немає доступних тренувань. Додайте свій перший тип тренування, щоб почати.",
+        "delete": {
+          "title": "Видалити тренування",
+          "message": "Ви впевнені, що хочете видалити це тренування? Цю дію неможливо скасувати.",
+          "confirm": "Видалити"
+        }
+      },
+      "trainers": {
+        "title": "Тренери клубу",
+        "add": "Додати тренера",
+        "empty": "Поки що немає призначених тренерів. Додайте тренерів, щоб почати створювати розклади.",
+        "delete": {
+          "title": "Видалити тренера",
+          "message": "Ви впевнені, що хочете видалити цього тренера? Цю дію неможливо скасувати.",
+          "confirm": "Видалити"
+        }
+      },
+      "schedule": {
+        "title": "Розклад занять",
+        "add": "Додати розклад",
+        "empty": "Поки що немає запланованих занять. Спочатку додайте тренування та тренерів, а потім створіть розклад.",
+        "delete": {
+          "title": "Видалити розклад",
+          "message": "Ви впевнені, що хочете видалити цей розклад занять? Цю дію неможливо скасувати.",
+          "confirm": "Видалити",
+          "success": "Розклад успішно видалено"
+        }
+      }
+    }
+  },
+  "schedule": {
+    "weekly_view": "Тижневий вигляд",
+    "daily_view": "Щоденний вигляд",
+    "days": {
+      "monday": "Понеділок",
+      "tuesday": "Вівторок",
+      "wednesday": "Середа",
+      "thursday": "Четвер",
+      "friday": "П'ятниця",
+      "saturday": "Субота",
+      "sunday": "Неділя"
+    },
+    "no_schedules": "Немає розкладів на цей день",
+    "classes": "занять"
+  },
+  "trainer": {
+    "create": {
+      "pageTitle": "Додати тренера",
+      "title": "Додати нового тренера",
+      "subtitle": "Заповніть дані тренера нижче",
+      "success": "Тренера успішно додано",
+      "error": "Помилка при додаванні тренера"
+    },
+    "edit": {
+      "pageTitle": "Редагувати тренера",
+      "title": "Редагувати тренера",
+      "subtitle": "Оновіть дані тренера"
+    },
+    "update": {
+      "success": "Дані тренера оновлено",
+      "error": "Помилка при оновленні даних тренера"
+    },
+    "delete": {
+      "title": "Видалити тренера",
+      "message": "Ви впевнені, що хочете видалити цього тренера? Цю дію неможливо скасувати.",
+      "confirm": "Видалити",
+      "error": {
+        "hasSchedules": "Неможливо видалити тренера '{{name}}', оскільки він призначений на один або більше розкладів. Будь ласка, спочатку переназначте або видаліть розклади.",
+        "generic": "Сталася помилка при видаленні тренера. Будь ласка, спробуйте ще раз."
+      },
+      "success": "Тренера '{{name}}' успішно видалено"
+    },
+    "form": {
+      "firstName": {
+        "label": "Ім'я",
+        "placeholder": "Введіть ім'я",
+        "required": "Ім'я обов'язкове",
+        "length": "Ім'я має бути від 2 до 50 символів"
+      },
+      "lastName": {
+        "label": "Прізвище",
+        "placeholder": "Введіть прізвище",
+        "required": "Прізвище обов'язкове",
+        "length": "Прізвище має бути від 2 до 50 символів"
+      },
+      "email": {
+        "label": "Електронна пошта",
+        "placeholder": "Введіть адресу електронної пошти",
+        "required": "Електронна пошта обов'язкова",
+        "invalid": "Будь ласка, введіть дійсну адресу електронної пошти"
+      },
+      "phoneNumber": {
+        "label": "Номер телефону",
+        "placeholder": "Введіть номер телефону (напр. +380501234567)",
+        "required": "Номер телефону обов'язковий",
+        "invalid": "Будь ласка, введіть дійсний номер телефону, що починається з + та містить цифри"
+      },
+      "specialization": {
+        "label": "Спеціалізація",
+        "placeholder": "Введіть спеціалізацію (напр. Йога, Кросфіт)"
+      }
+    }
+  },
+  "payment": {
+    "status": {
+      "completed": "Завершено",
+      "canceled": "Скасовано",
+      "pending": "В обробці"
+    }
   }
 } 
