--- a/ui/admin/src/assets/i18n/uk.json
+++ b/ui/admin/src/assets/i18n/uk.json
@@ -82,6 +82,7 @@
       "noLocations": "Локацій не знайдено. Додайте свою першу локацію, щоб почати.",
       "loading": "Завантаження локацій...",
       "addLocation": "Додати локацію",
+      "edit": "Редагувати локацію",
       "delete": {
         "title": "Видалити локацію",
         "message": "Ви впевнені, що хочете видалити цю локацію? Цю дію неможливо скасувати.",
