--- a/ui/client/src/assets/i18n/uk.json
+++ b/ui/client/src/assets/i18n/uk.json
@@ -97,7 +97,7 @@
     "close": "Закрити"
   },
   "breadcrumb": {
-    "dashboard": "Панель керування",
+    "dashboard": "Клуби",
     "locations": "Локації"
   },
   "locations": {
@@ -122,6 +122,15 @@
     "cancel_visit": "Скасувати відвідування",
     "your_visits": "Ваші відвідування",
     "book_more_dates": "Зареєструвати більше відвідувань",
+    "days": {
+      "MONDAY": "Понеділок",
+      "TUESDAY": "Вівторок",
+      "WEDNESDAY": "Середа",
+      "THURSDAY": "Четвер",
+      "FRIDAY": "П'ятниця",
+      "SATURDAY": "Субота",
+      "SUNDAY": "Неділя"
+    },
     "errors": {
       "noCredits": "Вам потрібно спочатку придбати кредити на тренування, перш ніж бронювати це відвідування",
       "capacityExceeded": "Цей клас вже заповнений",
@@ -129,4 +138,4 @@
       "generic": "Під час бронювання вашого відвідування сталася помилка. Будь ласка, спробуйте ще раз."
     }
   }
-} 
+}
