Client application: migrate schedule component to location component

--- a/ui/client/src/assets/i18n/en.json
+++ b/ui/client/src/assets/i18n/en.json
@@ -105,6 +105,9 @@
     "noLocations": "No locations found",
     "loading": "Loading locations..."
   },
+  "locationDetails": {
+    "title": "Location details"
+  },
   "schedules": {
     "title": "Schedules",
     "noSchedules": "No schedules found",
