--- a/ui/client/src/assets/i18n/uk.json
+++ b/ui/client/src/assets/i18n/uk.json
@@ -105,6 +105,9 @@
     "noLocations": "Локацій не знайдено",
     "loading": "Завантаження локацій..."
   },
+  "locationDetails": {
+    "title": "Локація"
+  },
   "schedules": {
     "title": "Розклад",
     "noSchedules": "Розкладів не знайдено",
