--- a/ui/client/src/assets/i18n/uk.json
+++ b/ui/client/src/assets/i18n/uk.json
@@ -140,5 +140,25 @@
       "invalidDate": "Вибрана дата недоступна для цього розкладу",
       "generic": "Під час бронювання вашого відвідування сталася помилка. Будь ласка, спробуйте ще раз."
     }
+  },
+  "payment": {
+    "history": {
+      "title": "Історія платежів",
+      "show": "Показати історію платежів",
+      "hide": "Приховати історію платежів",
+      "empty": "Історія платежів відсутня",
+      "date": "Дата",
+      "training": "Тренування",
+      "units": "Кількість",
+      "amount": "Сума",
+      "status": "Статус",
+      "valid_for": "дійсно",
+      "days": "днів"
+    },
+    "status": {
+      "completed": "Завершено",
+      "pending": "В обробці",
+      "canceled": "Скасовано"
+    }
   }
 }
