Client application: mark expired payments in the history

--- a/ui/client/src/assets/i18n/en.json
+++ b/ui/client/src/assets/i18n/en.json
@@ -158,7 +158,8 @@
     "status": {
       "completed": "Completed",
       "pending": "Pending",
-      "canceled": "Canceled"
+      "canceled": "Canceled",
+      "expired": "Expired"
     }
   }
 }
