--- a/ui/client/src/assets/i18n/uk.json
+++ b/ui/client/src/assets/i18n/uk.json
@@ -158,7 +158,8 @@
     "status": {
       "completed": "Завершено",
       "pending": "В обробці",
-      "canceled": "Скасовано"
+      "canceled": "Скасовано",
+      "expired": "Закінчився"
     }
   }
 }
