Client application: show more information about payment in payment history

--- a/ui/client/src/assets/i18n/en.json
+++ b/ui/client/src/assets/i18n/en.json
@@ -153,7 +153,9 @@
       "amount": "Amount",
       "status": "Status",
       "valid_for": "valid for",
-      "days": "days"
+      "days": "days",
+      "remaining": "Remaining",
+      "expires": "Expires"
     },
     "status": {
       "completed": "Completed",
