Client application: show purchase required label in case when user should buy training pass for specific training

--- a/ui/client/src/assets/i18n/en.json
+++ b/ui/client/src/assets/i18n/en.json
@@ -125,6 +125,7 @@
     "cancel_visit": "Cancel Visit",
     "your_visits": "Your visits",
     "book_more_dates": "Register more visits",
+    "purchase_required": "Purchase required",
     "days": {
       "MONDAY": "Monday",
       "TUESDAY": "Tuesday",
