--- a/ui/client/src/assets/i18n/uk.json
+++ b/ui/client/src/assets/i18n/uk.json
@@ -125,6 +125,7 @@
     "cancel_visit": "Скасувати відвідування",
     "your_visits": "Ваші відвідування",
     "book_more_dates": "Зареєструвати більше відвідувань",
+    "purchase_required": "Потрібна оплата",
     "days": {
       "MONDAY": "Понеділок",
       "TUESDAY": "Вівторок",
