--- a/ui/client/src/assets/i18n/uk.json
+++ b/ui/client/src/assets/i18n/uk.json
@@ -125,7 +125,7 @@
     "cancel_visit": "Скасувати відвідування",
     "your_visits": "Ваші відвідування",
     "book_more_dates": "Зареєструвати більше відвідувань",
-    "purchase_required": "Потрібна оплата",
+    "purchase_required": "Потрібно придабати",
     "days": {
       "MONDAY": "Понеділок",
       "TUESDAY": "Вівторок",
@@ -139,6 +139,7 @@
       "noCredits": "Вам потрібно спочатку придбати кредити на тренування, перш ніж бронювати це відвідування",
       "capacityExceeded": "Цей клас вже заповнений",
       "invalidDate": "Вибрана дата недоступна для цього розкладу",
+      "shouldPayFOrVisit": "Неможливо забронювати візит: спочатку потрібно оплатити тренування",
       "generic": "Під час бронювання вашого відвідування сталася помилка. Будь ласка, спробуйте ще раз."
     }
   },
