--- a/ui/admin/src/assets/i18n/uk.json
+++ b/ui/admin/src/assets/i18n/uk.json
@@ -405,9 +405,9 @@
   },
   "payment": {
     "status": {
-      "completed": "Завершено",
+      "completed": "Оплачено",
       "canceled": "Скасовано",
       "pending": "В обробці"
     }
   }
-} 
+}
