Admin application: add remaining trainings label to payment history

--- a/ui/admin/src/assets/i18n/en.json
+++ b/ui/admin/src/assets/i18n/en.json
@@ -33,7 +33,8 @@
     "remainingTrainings": "Remaining Trainings",
     "subscriptionExpiration": "Subscription Expires On",
     "return": "Return",
-    "custom": "Custom"
+    "custom": "Custom",
+    "remaining": "remaining"
   },
   "login": {
     "pageTitle": "Login",
